--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "webpack",
     "watch": "webpack --watch --mode=development",
     "start": "webpack serve --mode=development --open"
   },
